# scala-transformers

./: .gitignore  CHANGES.md  README.md  averager.sh  build.sbt  example.sh  publish.sbt  pyproject.toml  release.sbt  requirements.txt  trainer.sh
.github/workflows/: ci.yml  python.yml  scala.yml
apps/: build.sbt
apps/src/main/scala-2.12/org/clulab/scala_transformers/apps/: BlasInstanceApp.scala.txt
apps/src/main/scala/org/clulab/scala_transformers/apps/: LoadExampleFromFileApp.scala  LoadExampleFromResourceApp.scala  TokenClassifierExampleApp.scala  TokenClassifierTimerApp.scala
common/: build.sbt
common/src/main/scala/org/clulab/scala_transformers/: LibraryLoader.scala
common/src/main/scala/org/clulab/scala_transformers/common/: LibraryLoader.scala  Timer.scala
common/src/test/scala/org/clulab/transformers/test/: Test.scala
encoder/: README.md  build.sbt
encoder/src/main/python/: averager.py  averager_with_trainer.py  averaging_trainer.py  basic_trainer.py  clu_timer.py  clu_tokenizer.py  clu_trainer.py  configuration.py  data_wrangler.py  data_wrangling.py  dual_data_collator.py  evaluation_metrics.py  evaluator.py  file_utils.py  mypy.ini  names.py  none_filter.py  parameters.py  run_documents.py  run_sentences.py  save_pretrained.py  task.py  tensor_filter.py  test_clu_tokenizer.py  test_clu_trainer.py  test_data_wrangler.py  test_names.py  test_trainer.py  timer.py  token_classifier.py  tokenizer.py  trainer.py  trainer_simple.py
encoder/src/main/scala-2.12/org/clulab/scala_transformers/encoder/apps/: BlasInstanceApp.scala
encoder/src/main/scala/org/clulab/scala_transformers/encoder/: BlasInstanceApp.scala  BreezeExample.scala  BreezeExamples.scala  BreezeUtils.scala  Encoder.scala  LinearLayer.scala  LinearLayerFactory.scala  LinearLayerLayout.scala  LoadExample.scala  LoadExampleApp.scala  ModelLayout.scala  ModelReader.scala  NonLinearity.scala  Sourcer.scala  Timer.scala  TokenClassifier.scala  TokenClassifierExample.scala  TokenClassifierExampleApp.scala  TokenClassifierFactory.scala  TokenClassifierLayout.scala  TokenClassifierTimerApp.scala
encoder/src/main/scala/org/clulab/scala_transformers/encoder/apps/: BlasInstanceApp.scala  LoadExampleApp.scala  LoadExampleFromFileApp.scala  LoadExampleFromResourceApp.scala  TokenClassifierExampleApp.scala  TokenClassifierTimerApp.scala
encoder/src/main/scala/org/clulab/scala_transformers/encoder/math/: BreezeMath.scala  CluMath.scala  CluMath.scala.txt  CommonsMath.scala  CommonsMath.scala.txt  EjmlMath.scala  Math.scala  Mathematics.scala  OnnxMath.scala
encoder/src/main/scala/org/clulab/scala_transformers/encoder/timer/: Timer.scala
encoder/src/test/resources/: labels.txt  sentences.txt
encoder/src/test/scala/org/clulab/scala_transformers/encoder/: RegressionTestTokenClassifier.scala  TestBreeze.scala
encoder/src/test/scala/org/clulab/scala_transformers/encoder/math/: BreezeMathTest.scala  BreezeMathTest.scala.txt  CluMathTest.scala  (+3 more)
project/: BuildUtils.scala  plugins.sbt
python/: README.md  pipeline.py
python/apps/: run_documents.py  save_pretrained.py
python/classifiers/: __init__.py  token_classifier.py
python/core/: __init__.py  data_wrangler.py  dual_data_collator.py  file_utils.py  names.py  parameters.py  task.py  tensor_filter.py
python/datasets/: __init__.py  data_wrangler.py
python/evaluation/: __init__.py  evaluator.py
python/tests/: test_clu_tokenizer.py  test_clu_trainer.py  test_data_wrangler.py  test_names.py
python/tests/data/chunking/: test_sample.txt  train_sample.txt
python/tests/data/conll-ner/: train_sample.txt
python/tests/data/pos/: train_sample.txt
python/tokenizers/: __init__.py  clu_tokenizer.py
python/trainers/: __init__.py  averaging_trainer.py  basic_trainer.py  clu_trainer.py
python/utils/: __init__.py  clu_timer.py  file_utils.py
tokenizer/: README.md  build.sbt
tokenizer/src/main/rust/: Cargo.toml
tokenizer/src/main/rust/src/: rust_tokenizer.rs
tokenizer/src/main/scala/org/clulab/scala_transformers/tokenizer/: LongTokenization.scala  Tokenization.scala  Tokenizer.scala  Tokenizing.scala
tokenizer/src/main/scala/org/clulab/transformers/tokenizer/: LibraryLoader.scala  Tokenization.scala  Tokenizer.scala  Tokenizing.scala
tokenizer/src/test/resources/words/: distilbert-base-cased-mtl.txt  google-bert_uncased_L-4_H-512_A-8-mtl.txt  google-electra-small-discriminator-mtl.txt  microsoft-deberta-v3-base-mtl.txt  roberta-base-mtl.txt  words.txt  xlm-roberta-base-mtl.txt
tokenizer/src/test/scala/org/clulab/scala_transformers/tokenizer/: SentencesTest.scala  TokenizerTest.scala  TokenizersTest.scala
(+19 files in other folders)
